--- a/index.html
+++ b/index.html
@@ -1,10 +1,58 @@
 <!doctype html>
-<html lang="en">
+<html lang="ru">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>onlinemix</title>
+
+    <!-- Primary Meta Tags -->
+    <title>Mixify Cup - Платформа для организации турниров</title>
+    <meta
+      name="title"
+      content="Mixify Cup - Платформа для организации турниров"
+    />
+    <meta
+      name="description"
+      content="Mixify Cup - современная платформа для организации и проведения киберспортивных турниров. Система лобби, драфт, управление игроками и заявками."
+    />
+    <meta
+      name="keywords"
+      content="киберспорт, турниры, лобби, драфт, Mixify Cup, игровые турниры"
+    />
+    <meta name="author" content="Mixify Cup" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="Russian" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://mixifycup.com/" />
+    <meta
+      property="og:title"
+      content="Mixify Cup - Платформа для организации турниров"
+    />
+    <meta
+      property="og:description"
+      content="Mixify Cup - современная платформа для организации и проведения киберспортивных турниров. Система лобби, драфт, управление игроками и заявками."
+    />
+    <meta property="og:image" content="/logo.svg" />
+    <meta property="og:locale" content="ru_RU" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://mixifycup.com/" />
+    <meta
+      property="twitter:title"
+      content="Mixify Cup - Платформа для организации турниров"
+    />
+    <meta
+      property="twitter:description"
+      content="Mixify Cup - современная платформа для организации и проведения киберспортивных турниров. Система лобби, драфт, управление игроками и заявками."
+    />
+    <meta property="twitter:image" content="/logo.svg" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#56F4FF" />
+    <meta name="msapplication-TileColor" content="#56F4FF" />
   </head>
   <body>
     <div id="root"></div>
