--- a/index.html
+++ b/index.html
@@ -53,6 +53,10 @@
     <!-- Theme Color -->
     <meta name="theme-color" content="#56F4FF" />
     <meta name="msapplication-TileColor" content="#56F4FF" />
+
+    <!-- Preload critical images -->
+    <link rel="preload" as="image" href="/dragonstouch_loading_screen.webp" type="image/webp" />
+    <link rel="preload" as="image" href="/land-bg-2-1.webp" type="image/webp" />
   </head>
   <body>
     <div id="root"></div>
